--- a/1_presiding.html
+++ b/1_presiding.html
@@ -1608,6 +1608,10 @@
       formData.forEach((value, key) => {
         if (key === 'presiding_iid' && !isAddMode) return; // do not update primary id in edit mode
         const trimmedValue = value.trim();
+        if (key === 'disability') {
+          payload[key] = trimmedValue ? trimmedValue : null; // allow saving cleared disability as NULL
+          return;
+        }
         if (trimmedValue || key === 'presiding_iid') {
           payload[key] = trimmedValue;
         }
