--- a/3_polling_edit.html
+++ b/3_polling_edit.html
@@ -1336,7 +1336,12 @@
           const polling_iid = row && row.polling_iid;
 
           if (polling_iid) {
-            payloads.push({ polling_iid, ...changes });
+            const merged = { polling_iid, ...changes };
+            if ('disability' in merged) {
+              const d = (merged.disability ?? '').toString().trim();
+              merged.disability = d === '' ? null : d; // normalize cleared disability to NULL
+            }
+            payloads.push(merged);
           }
         });
 
@@ -1392,6 +1397,10 @@
       // Merge existing row data with any modified values for this row
       const changes = modifiedRows.get(rowIndex) || {};
       const payload = { ...row, ...changes };
+      if ('disability' in payload) {
+        const d = (payload.disability ?? '').toString().trim();
+        payload.disability = d === '' ? null : d;
+      }
 
       const rowBtn = document.querySelector(`tr[data-row-index="${rowIndex}"] .action-btn`);
       const prevText = rowBtn ? rowBtn.textContent : '';
