--- a/dashboard.html
+++ b/dashboard.html
@@ -441,11 +441,12 @@
 					<span class="icon">👨‍💻</span>
 					<span>4. Appointment Letter</span>
 				</a>
-
+-
 				<a class="button secondary" href="generate/error_finding.html" title="ট্রেনিং তালিকা">
 					<span class="icon">👨‍💻</span>
 					<span>Error finding</span>
 				</a>
+			-
 				<a class="button secondary" href="generate/5_duty_not_assigned.html" title="ট্রেনিং তালিকা">
 					<span class="icon">👨‍💻</span>
 					<span>Duty Not assigned List</span>
@@ -454,6 +455,10 @@
 				<a class="button secondary" href="call.html" title="ট্রেনিং তালিকা">
 					<span class="icon">👨‍💻</span>
 					<span>Call</span>
+				</a>
+				<a class="button secondary" href="postal_ballet/dashboard.html" title="ট্রেনিং তালিকা">
+					<span class="icon">👨‍💻</span>
+					<span>পোস্টাল ব্যালেট</span>
 				</a>
 			</div>
 		</div>
