--- a/dashboard.html
+++ b/dashboard.html
@@ -437,9 +437,9 @@
 					<span class="icon">👨‍💻</span>
 					<span>3. Duty finding (Centre)</span>	
 				</a>
-				<a class="button secondary" href="generate/3_vote_centre.html" title="ট্রেনিং তালিকা">
+				<a class="button secondary" href="generate/1_apointment_letter_all.html" title="ট্রেনিং তালিকা">
 					<span class="icon">👨‍💻</span>
-					<span>4. Appointment Letter</span>
+					<span>4. Appointment Letter all</span>
 				</a>
 -
 				<a class="button secondary" href="generate/error_finding.html" title="ট্রেনিং তালিকা">
