--- a/postal_ballet/index.html
+++ b/postal_ballet/index.html
@@ -449,8 +449,8 @@
         
         const supabaseClient = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-        // ImgBB configuration 8fce4d212407214298f93c823314a1d9
-        const IMGBB_API_KEY = '08fb77c456a32ebd678f6da3cec831e6';
+        // ImgBB configuration 8fce4d212407214298f93c823314a1d9; a1ee3bc32bc2857223b794870aa262ee; 08fb77c456a32ebd678f6da3cec831e6
+        const IMGBB_API_KEY = 'a1ee3bc32bc2857223b794870aa262ee';
         const IMGBB_UPLOAD_URL = 'https://api.imgbb.com/1/upload';
 
         let selectedOfficer = null;
