--- a/dashboard.html
+++ b/dashboard.html
@@ -460,6 +460,10 @@
 					<span class="icon">👨‍💻</span>
 					<span>পোস্টাল ব্যালেট</span>
 				</a>
+				<a class="button secondary" href="postal_ballet/sms_api.html" title="ট্রেনিং তালিকা">
+					<span class="icon">👨‍💻</span>
+					<span>SMS</span>
+				</a>
 			</div>
 		</div>
 
