--- a/dashboard.html
+++ b/dashboard.html
@@ -441,6 +441,10 @@
 					<span class="icon">👨‍💻</span>
 					<span>4. Appointment Letter all</span>
 				</a>
+				<a class="button secondary" href="generate/6_fixed_assignment.html" title="ট্রেনিং তালিকা">
+					<span class="icon">👨‍💻</span>
+					<span>Fixed Duty</span>
+				</a>
 -
 				<a class="button secondary" href="generate/error_finding.html" title="ট্রেনিং তালিকা">
 					<span class="icon">👨‍💻</span>
